syntax = "proto3";

option java_package = "com.ecommerce.website.grpc";

message CustomerRequest{
	int64 mobile=1;
}

message CustomerRegister{
	int64 customerId = 1;
	string firstName = 2;
	string lastName = 3;
	string email = 4;
	string mobile = 5;
	string address = 6;
	string password = 7;
}

message CustomerRegisterResponse{
	repeated CustomerRegister customerRegister = 1;
}

service CustomerRegisterService{
	rpc fetchCustomers(CustomerRequest) returns (CustomerRegisterResponse);
}